--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div class="headContainer">
                 <div class="headItem">thoughts</div>
             </div>
+            <div class="headContainer">
                 <div class="headItem">about</div>
             </div>
             <div class="headContainer">
