Adding CSS fake file

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             </div>
             <div class="headContainer">
                 <div class="headItem">contact</div>
+
+
+                Hello World 
             </div>
         </div>
     </div>
